fix(article): fix heading spacing for flat articles

--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_article.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_article.scss
@@ -61,14 +61,6 @@
 
     &-body {
         margin-top: 2em;
-
-        h3 {
-            margin-bottom: 20px;
-        }
-
-        h4, h5, h6 {
-            margin-bottom: 10px;
-        }
     }
 
     &-date {
@@ -98,7 +90,15 @@
         margin: 0;
     }
 
-    article {
+    article, &-body {
         overflow-wrap: anywhere;
+
+        h3 {
+            margin-bottom: 20px;
+        }
+
+        h4, h5, h6 {
+            margin-bottom: 10px;
+        }
     }
 }
